[gd_scene load_steps=5 format=3 uid="uid://jni4q16mxj73"]

[ext_resource type="Script" path="res://scripts/quests/quest_1.gd" id="1_jck5f"]
[ext_resource type="Texture2D" uid="uid://c75n5pi4cdu5i" path="res://art/quests/cross.png" id="2_4nf02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxfts"]
size = Vector2(822, 658)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vy60r"]
size = Vector2(822, 77)

[node name="Quest1" type="Node2D"]
script = ExtResource("1_jck5f")

[node name="SpawnPos1" type="Sprite2D" parent="."]
texture = ExtResource("2_4nf02")

[node name="SpawnPos2" type="Sprite2D" parent="."]
position = Vector2(200, 0)
texture = ExtResource("2_4nf02")

[node name="SpawnPos3" type="Sprite2D" parent="."]
position = Vector2(400, 0)
texture = ExtResource("2_4nf02")

[node name="SpawnPos4" type="Sprite2D" parent="."]
position = Vector2(600, -2)
texture = ExtResource("2_4nf02")

[node name="QuestArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestArea"]
position = Vector2(305, 319)
shape = SubResource("RectangleShape2D_sxfts")

[node name="Label" type="Label" parent="QuestArea/CollisionShape2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="TimeInsideArea" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="QuestTime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="GarbageLimit" type="StaticBody2D" parent="." groups=["GarbageLimit"]]
position = Vector2(0, 581)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbageLimit"]
position = Vector2(305, 28.5)
shape = SubResource("RectangleShape2D_vy60r")

[connection signal="body_entered" from="QuestArea" to="." method="_on_quest_area_body_entered"]
[connection signal="body_exited" from="QuestArea" to="." method="_on_quest_area_body_exited"]
[connection signal="timeout" from="TimeInsideArea" to="." method="_on_time_inside_area_timeout"]
[connection signal="timeout" from="QuestTime" to="." method="_on_quest_time_timeout"]
